force-app/main/default/objects/Product_Cart__c/Product_Cart__c.object-meta.xml
<CustomObject>
    <description>A list of products to add to an Opportunity record. The cart is individual for each user.</description>
    <label>Product Cart</label>
    <nameField>
        <displayFormat>CRT-{00000000}</displayFormat>
        <label>Product Cart ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Carts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>