force-app/main/default/objects/Product_Cart__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Carts</relationshipLabel>
    <relationshipName>Product_Cart_Products</relationshipName>
    <type>Lookup</type>
</CustomField>